<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.MenuActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/go_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/go_to_login"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:onClick="openLogin"
        android:text="@string/login"
        android:textColor="@color/dark_blue"
        android:theme="@style/WhiteBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:rippleColor="@color/gold" />

    <Button
        android:id="@+id/go_to_register"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="200dp"
        android:onClick="openRegister"
        android:text="@string/register"
        android:textColor="@color/dark_blue"
        android:theme="@style/WhiteBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_login"
        app:rippleColor="@color/gold" />

</androidx.constraintlayout.widget.ConstraintLayout>